# rust_go_ffi

./: .gitignore  Cargo.toml  Makefile  README.md  build.py  build.rs  build_and_run.ps1
benches/: ffi_benchmarks.rs
examples/: advanced_usage.rs  basic_usage.rs  metrics_example.rs
go_lib/: go.mod  go_lib.go
src/: ffi.rs  installer.rs  lib.rs  main.rs
tests/: integration_test.rs
