[package]
name = "rust_go_ffi"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Go FFI"
license = "MIT"
rust-version = "1.70"

[features]
default = ["auto-install"]
auto-install = ["dirs"]                                                          # Feature for automatic DLL installation
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus", "dep:metrics-util"]
tracing = ["opentelemetry", "tracing-subscriber"]
auto-cleanup = []

[[bin]]
name = "rust_go_ffi"
path = "src/main.rs"

[lib]
name = "rust_go_ffi"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
colored = "3.0.0"
ctrlc = "3.4.1"
dirs = { version = "6.0.0", optional = true }
env_logger = "0.11.6"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
metrics = { version = "0.24.1", optional = true }
metrics-exporter-prometheus = { version = "0.16.2", optional = true }
metrics-runtime = { version = "0.13", optional = true }
metrics-util = { version = "0.19.0", optional = true }
once_cell = "1.20.3"
opentelemetry = { version = "0.27.1", optional = true }
parking_lot = "0.12"
semver = "1.0"
test-log = "0.2"
thiserror = "2.0.11"
tracing-subscriber = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "consoleapi"] }

[build-dependencies]
bindgen = "0.71.1"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.13.1"
temp-env = "0.3"
test-log = "0.2"
env_logger = "0.11.6"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "metrics_example"
path = "examples/metrics_example.rs"
required-features = ["metrics"]

# Optional: Configuration for development and release profiles
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1

[[bench]]
name = "ffi_benchmarks"
harness = false
